add docker setup
